@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,7 @@
  *      is retrieved no matter CLDR provider contains the name or not.
  * @modules jdk.localedata
  * @run testng/othervm JapaneseEraNameTest
- * @run testng/othervm -Djava.locale.providers=CLDR JapaneseEraNameTest
+ * @run testng/othervm JapaneseEraNameTest
  */
 
 import static java.util.Calendar.*;
